# BOSK

./: .gitignore  pyproject.toml
bosk/: __init__.py  big_picture_utils.py  imports.py  train.py  utils.py
docs/: bosk.rst  conf.py  index.rst  modules.rst
notebooks/: big_picture_segmentation.ipynb  comparison.ipynb  segmentation_models.ipynb  train_model_for_whole_map.ipynb
