[project]
name = "bosk"
version = "0.1.0"
description = "Module for segmentation extended objects"
authors = [
    {name = "m_evgeniy",email = "marchuk.ep@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
]
packages = [
    { include = "bosk", from = "."}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"

