[project]
name = "bosk"
version = "0.1.0"
description = "Module for segmentation extended objects"
authors = [
    {name = "Marchuk Evgeniy",email = "marchuk.ep@phystech.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "prettier (>=0.0.7,<0.0.8)",
    "sphinx (>=8.2.1,<9.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "segmentation-models-pytorch (>=0.4.0,<0.5.0)",
    "transformers (>=4.49.0,<5.0.0)",
    "torchmetrics (>=1.6.1,<2.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]
packages = [
    { include = "bosk", from = "."}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
fire = "^0.7.0"
isort = "^6.0.0"
black = "^25.1.0"
pre-commit = "^4.1.0"
